--- a/mysql_javascript/package.json
+++ b/mysql_javascript/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
     "handlebars": "^4.7.7",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.14.0"
